--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<li><a href="eid.html" target="#new2">EID</a></li>
 		<li><a href="xmas.html" target="#new3">X-MAS</a></li>
 		<li><a href="sws.html" target="#new4">SARASWATIPUJA</a></li>
+		<li><a href="all1.png" download>download png</a></li>
 	</ol>
 
 </body>
